# budgie-analog-clock

./: BudgieAnalogClock.plugin  README.md  budgie_analog_clock.py  com.github.samlane-ma.budgie-analog-clock.gschema.xml  install.sh  meson.build
src/: budgie_analog_clock.py  createsvg.py  meson.build
